@@ -1758,6 +1758,13 @@ Orr
 7746
 756
 
+/[ Patterns by Other Authors ]
+*Tim Andrews (http://ttbomb12.tripod.com)
+%Windmill
+6464 Tims Multi Mill
+%Mills Mess
+6464 Tims Multi Mess
+
 /[ Patterns By Scotch Tom ]
 *Tom Davie <tom.davie@gmail.com>
 %Normal
