@@ -1,5 +1,7 @@
 Version 0.5
  - jmlib: Added authors to patterns
+ - data: Added more patterns
+ - jmlib: Other minor fixes
 
 Version 0.4
 2004-09-01
